Ajustando parâmetros.